--- a/ChatApp/Scenes/ChatDetail/Cell/MessageTableCell.xib
+++ b/ChatApp/Scenes/ChatDetail/Cell/MessageTableCell.xib
@@ -16,42 +16,75 @@
                 <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iga-af-mlc">
-                        <rect key="frame" x="11" y="2" width="329" height="56"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fhl-ST-Qau">
-                        <rect key="frame" x="343" y="43" width="45" height="15"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iGd-jO-Ec5">
+                        <rect key="frame" x="348" y="45" width="45" height="18"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qYi-XS-7bA">
-                                <rect key="frame" x="0.0" y="0.0" width="30" height="15"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="YTq-NT-Gym"/>
-                                    <constraint firstAttribute="width" constant="30" id="pbj-h4-gBk"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="036-3s-hI6">
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.32549019610000002" green="0.38431372549999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cup.and.saucer" catalog="system" id="fzN-dJ-vAo">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="7KR-ts-eeL">
                                 <rect key="frame" x="30" y="0.0" width="15" height="15"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                     </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iga-af-mlc">
+                        <rect key="frame" x="60" y="0.0" width="285" height="63"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="63" id="1Fn-ws-z0g"/>
+                            <constraint firstAttribute="width" constant="285" id="Rt8-uw-Qsw"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eDD-RL-4XN">
+                        <rect key="frame" x="0.0" y="45" width="47" height="18"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.horizon.fill" catalog="system" id="sFq-qf-1k0">
+                                <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.59" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zZ0-IG-Iyt">
+                                <rect key="frame" x="17" y="0.0" width="30" height="16"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                <color key="textColor" red="0.32549019610000002" green="0.38431372549999998" blue="0.41176470590000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="eDD-RL-4XN" secondAttribute="bottom" id="AHq-Uw-BsD"/>
+                    <constraint firstAttribute="trailing" secondItem="iGd-jO-Ec5" secondAttribute="trailing" id="Beh-9k-M88"/>
+                    <constraint firstItem="iga-af-mlc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="Pcy-iA-hS0"/>
+                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" id="PrB-tp-bIn"/>
+                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" id="WFK-um-Mr3"/>
+                    <constraint firstItem="iGd-jO-Ec5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="45" id="f3C-zT-xPP"/>
+                    <constraint firstItem="eDD-RL-4XN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="45" id="h7x-44-vD5"/>
+                    <constraint firstItem="eDD-RL-4XN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="v50-oN-F5f"/>
+                    <constraint firstItem="iga-af-mlc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="wWS-49-w6i"/>
+                    <constraint firstAttribute="bottom" secondItem="iga-af-mlc" secondAttribute="bottom" id="y9w-5q-Px2"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="leftTimeLabel" destination="036-3s-hI6" id="51T-0Q-3ec"/>
+                <outlet property="leftView" destination="iGd-jO-Ec5" id="jkl-Bm-WVH"/>
+                <outlet property="leftimageView" destination="7KR-ts-eeL" id="kQb-qd-tWq"/>
                 <outlet property="messageLabel" destination="iga-af-mlc" id="W4r-Sx-huu"/>
+                <outlet property="rightTimeLabel" destination="zZ0-IG-Iyt" id="z4U-ya-7u7"/>
+                <outlet property="rightView" destination="eDD-RL-4XN" id="elv-bm-iuS"/>
+                <outlet property="rightimageView" destination="sFq-qf-1k0" id="piI-QY-0uJ"/>
             </connections>
             <point key="canvasLocation" x="-22.137404580152669" y="25.35211267605634"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="cup.and.saucer" catalog="system" width="128" height="91"/>
+        <image name="sun.horizon.fill" catalog="system" width="128" height="79"/>
     </resources>
 </document>
