--- a/ChatApp/Scenes/ChatDetail/ChatDetail.storyboard
+++ b/ChatApp/Scenes/ChatDetail/ChatDetail.storyboard
@@ -17,35 +17,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gjm-Xe-ulk">
-                                <rect key="frame" x="0.0" y="118" width="393" height="579"/>
+                                <rect key="frame" x="0.0" y="118" width="393" height="566"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="579" id="wo6-Jo-Q8J"/>
-                                </constraints>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WEU-b1-TzQ">
-                                <rect key="frame" x="0.0" y="697" width="393" height="87"/>
+                                <rect key="frame" x="0.0" y="684" width="393" height="100"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleAspectFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="14Y-Nb-4ZY">
-                                        <rect key="frame" x="0.0" y="15" width="393" height="60"/>
+                                    <stackView opaque="NO" contentMode="scaleAspectFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="14Y-Nb-4ZY">
+                                        <rect key="frame" x="0.0" y="20" width="393" height="60"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hjb-Eq-VEB">
                                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sv9-7Y-Fh6">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sv9-7Y-Fh6">
                                                         <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="Sv9-7Y-Fh6" firstAttribute="top" secondItem="hjb-Eq-VEB" secondAttribute="top" id="5P3-t7-nym"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Sv9-7Y-Fh6" secondAttribute="trailing" id="Y5F-V7-N3i"/>
+                                                    <constraint firstItem="Sv9-7Y-Fh6" firstAttribute="leading" secondItem="hjb-Eq-VEB" secondAttribute="leading" id="wgA-Oo-ZA5"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Sv9-7Y-Fh6" secondAttribute="bottom" id="zvm-bQ-eNO"/>
+                                                </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Mesaj Yazın" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="apF-Mq-CYK">
                                                 <rect key="frame" x="65" y="0.0" width="263" height="60"/>
                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="263" id="4XJ-VZ-Mij"/>
+                                                    <constraint firstAttribute="height" constant="60" id="fe2-vc-PkL"/>
                                                 </constraints>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -54,9 +56,8 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Vo-ds-Fo6">
                                                 <rect key="frame" x="333" y="0.0" width="60" height="60"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frI-uE-ocO">
-                                                        <rect key="frame" x="-4" y="0.0" width="60" height="60"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="frI-uE-ocO">
+                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain" image="paperplane.fill" catalog="system"/>
                                                         <connections>
@@ -65,41 +66,40 @@
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="frI-uE-ocO" secondAttribute="bottom" id="D2j-o5-qFA"/>
+                                                    <constraint firstItem="frI-uE-ocO" firstAttribute="leading" secondItem="6Vo-ds-Fo6" secondAttribute="leading" id="G3X-do-Td2"/>
+                                                    <constraint firstItem="frI-uE-ocO" firstAttribute="top" secondItem="6Vo-ds-Fo6" secondAttribute="top" id="V0G-mB-pOJ"/>
+                                                    <constraint firstAttribute="trailing" secondItem="frI-uE-ocO" secondAttribute="trailing" id="qMv-QF-G8l"/>
+                                                </constraints>
                                             </view>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="hjb-Eq-VEB" firstAttribute="leading" secondItem="14Y-Nb-4ZY" secondAttribute="leading" id="DgK-2F-LVw"/>
-                                            <constraint firstItem="hjb-Eq-VEB" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="GWZ-9f-f8M"/>
-                                            <constraint firstAttribute="trailing" secondItem="6Vo-ds-Fo6" secondAttribute="trailing" id="J11-7C-jyB"/>
-                                            <constraint firstItem="apF-Mq-CYK" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="R9T-qs-ueL"/>
-                                            <constraint firstItem="apF-Mq-CYK" firstAttribute="centerX" secondItem="14Y-Nb-4ZY" secondAttribute="centerX" id="SrU-SN-ToR"/>
-                                            <constraint firstAttribute="bottom" secondItem="6Vo-ds-Fo6" secondAttribute="bottom" id="pd0-bp-mdf"/>
-                                            <constraint firstAttribute="bottom" secondItem="hjb-Eq-VEB" secondAttribute="bottom" id="pqi-9U-byT"/>
-                                            <constraint firstItem="6Vo-ds-Fo6" firstAttribute="top" secondItem="14Y-Nb-4ZY" secondAttribute="top" id="rFH-WZ-aDR"/>
-                                            <constraint firstAttribute="bottom" secondItem="apF-Mq-CYK" secondAttribute="bottom" id="vAI-yT-lnT"/>
+                                            <constraint firstAttribute="height" constant="60" id="T5f-Yx-G8e"/>
                                         </constraints>
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="14Y-Nb-4ZY" secondAttribute="bottom" constant="12" id="S5d-zb-G0s"/>
-                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="top" secondItem="WEU-b1-TzQ" secondAttribute="top" constant="15" id="VT8-vM-xiZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="14Y-Nb-4ZY" secondAttribute="trailing" id="gcq-7y-zjr"/>
-                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="leading" secondItem="WEU-b1-TzQ" secondAttribute="leading" id="qC6-vO-74Z"/>
+                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="leading" secondItem="WEU-b1-TzQ" secondAttribute="leading" id="gHR-Yy-bwJ"/>
+                                    <constraint firstItem="14Y-Nb-4ZY" firstAttribute="centerY" secondItem="WEU-b1-TzQ" secondAttribute="centerY" id="tQ8-Dj-0h1"/>
+                                    <constraint firstAttribute="height" constant="100" id="xsT-S6-Vb2"/>
+                                    <constraint firstAttribute="trailing" secondItem="14Y-Nb-4ZY" secondAttribute="trailing" id="yCN-uS-uCz"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="0qI-jk-KbP"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="gjm-Xe-ulk" secondAttribute="bottom" id="1vg-5k-Kyt"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="3gY-44-om0"/>
-                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="bottom" secondItem="WEU-b1-TzQ" secondAttribute="top" id="4lR-IQ-DoR"/>
-                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Zzj-zm-dEw"/>
-                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="gIP-5b-AJe"/>
-                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="mYs-KW-dY2"/>
-                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="ndl-HZ-wKC"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="9qc-uh-u3y"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="AdR-5p-5Rs"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="IBf-qG-s8f"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="Lvo-tT-jCV"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="a9d-MD-nzp"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" id="heJ-KH-4hI"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="mcV-fb-PT1"/>
+                            <constraint firstItem="WEU-b1-TzQ" firstAttribute="top" secondItem="gjm-Xe-ulk" secondAttribute="bottom" id="pgw-5f-Dnf"/>
+                            <constraint firstItem="gjm-Xe-ulk" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="su9-aK-N4i"/>
                         </constraints>
                     </view>
                     <connections>
